syntax = "proto3";

package workspace.v1;

option go_package = "github.com/OpenElevo/ElevoSandbox/proto/workspace/v1";

// Agent service for bidirectional communication between server and sandbox agents
service AgentService {
  // Bidirectional streaming connection from agent to server
  rpc Connect(stream AgentMessage) returns (stream ServerMessage);
}

// Message from agent to server
message AgentMessage {
  oneof message {
    // Initial handshake
    AgentHandshake handshake = 1;

    // Heartbeat
    AgentHeartbeat heartbeat = 2;

    // Command response
    AgentCommandResponse command_response = 3;

    // PTY output
    AgentPtyOutput pty_output = 4;
  }
}

// Agent handshake message
message AgentHandshake {
  // Sandbox ID this agent belongs to
  string sandbox_id = 1;

  // Agent version
  string version = 2;
}

// Agent heartbeat
message AgentHeartbeat {
  // Timestamp in milliseconds
  uint64 timestamp = 1;
}

// Command response from agent
message AgentCommandResponse {
  // Correlation ID to match request
  string correlation_id = 1;

  oneof result {
    // Successful result
    AgentCommandSuccess success = 2;

    // Error result
    AgentCommandError error = 3;
  }
}

// Successful command result
message AgentCommandSuccess {
  // Exit code
  int32 exit_code = 1;

  // Standard output
  string stdout = 2;

  // Standard error
  string stderr = 3;
}

// Command error
message AgentCommandError {
  // Error code
  int32 code = 1;

  // Error message
  string message = 2;
}

// PTY output from agent
message AgentPtyOutput {
  // PTY ID
  string pty_id = 1;

  // Output data
  bytes data = 2;
}

// Message from server to agent
message ServerMessage {
  oneof message {
    // Handshake acknowledgment
    ServerHandshakeAck handshake_ack = 1;

    // Heartbeat acknowledgment
    ServerHeartbeatAck heartbeat_ack = 2;

    // Run command request
    AgentRunCommandRequest run_command = 3;

    // Kill process request
    AgentKillProcessRequest kill_process = 4;

    // Create PTY request
    AgentCreatePtyRequest create_pty = 5;

    // Resize PTY request
    AgentResizePtyRequest resize_pty = 6;

    // Kill PTY request
    AgentKillPtyRequest kill_pty = 7;

    // PTY input
    AgentPtyInput pty_input = 8;
  }
}

// Server handshake acknowledgment
message ServerHandshakeAck {
  bool success = 1;
  optional string error = 2;
}

// Server heartbeat acknowledgment
message ServerHeartbeatAck {
  uint64 timestamp = 1;
}

// Run command request for agent
message AgentRunCommandRequest {
  // Correlation ID for matching response
  string correlation_id = 1;

  // Command to execute
  string command = 2;

  // Command arguments
  repeated string args = 3;

  // Environment variables
  map<string, string> env = 4;

  // Working directory (optional)
  optional string cwd = 5;

  // Timeout in milliseconds (0 = no timeout)
  uint64 timeout_ms = 6;

  // Whether to stream output
  bool stream = 7;
}

// Kill process request for agent
message AgentKillProcessRequest {
  // Correlation ID
  string correlation_id = 1;

  // Process ID
  uint32 pid = 2;

  // Signal (default: SIGTERM = 15)
  int32 signal = 3;
}

// Create PTY request for agent
message AgentCreatePtyRequest {
  // Correlation ID
  string correlation_id = 1;

  // PTY ID (generated by server)
  string pty_id = 2;

  // Columns
  uint32 cols = 3;

  // Rows
  uint32 rows = 4;

  // Shell
  optional string shell = 5;

  // Environment variables
  map<string, string> env = 6;
}

// Resize PTY request for agent
message AgentResizePtyRequest {
  // Correlation ID
  string correlation_id = 1;

  // PTY ID
  string pty_id = 2;

  // New columns
  uint32 cols = 3;

  // New rows
  uint32 rows = 4;
}

// Kill PTY request for agent
message AgentKillPtyRequest {
  // Correlation ID
  string correlation_id = 1;

  // PTY ID
  string pty_id = 2;
}

// PTY input from server to agent
message AgentPtyInput {
  // PTY ID
  string pty_id = 1;

  // Input data
  bytes data = 2;
}
